--- a/index.html
+++ b/index.html
@@ -497,59 +497,75 @@
     </footer>
 
     <!-- modal form -->
-    <div class="modal-overlay">
-      <form class="modal-form">
-        <button class="modal-btn" type="button">
-          <svg width="8" height="8" class="icon-close">
-            <use href="./images/icons_2.svg#icon-close-black"></use>
-          </svg>
-        </button>
-
-        <fieldset class="form-group">
-          <legend class="group-title">
-            Leave your contacts and we will call you back
-          </legend>
-          <label class="form-label">
-            Name
-            <input type="text" name="username" required />
-          </label>
-          <label>
-            Phone
-            <input type="tel" name="contact_tel" required />
-          </label>
-          <label class="form-label">
-            Email
-            <input type="email" name="email" required />
-          </label>
-          <label class="form-label">
-            Comment
-            <textarea
-              class="form-input"
-              name="comment"
-              placeholder="Text input"
-              rows="5"
-            >
-            </textarea>
-          </label>
-        </fieldset>
-        <fieldset>
-          <div class="">
-            <input
-              type="checkbox"
-              name="privacy_policy"
-              value="privacy_policy"
-              id="privacy_policy"
-            />
-            <label class="form-label-text" for="privacy_policy"
-              >I accept the terms and conditions of the
-              <span class="modal-span">Privacy Policy</span></label
-            >
-          </div>
-        </fieldset>
-
-        <button class="modal-btn-send" type="submit">Send</button>
-      </form>
-    </div>
+    <div class="modal-overlay is-open">
+      <div class="modal-window">
+         <button class="modal-btn" type="button">
+            <svg width="8" height="8" class="icon-close">
+              <use href="./images/icons_2.svg#icon-close-black"></use>
+            </svg>
+          </button>
+          <p class="modal-text">Leave your contacts and we will call you back</p>
+          <form >
+            <div class="modal-form">
+              <label class="modal-form-field-label" for="user-name">Name</label>
+              <div class="modal-label-input">
+              <input
+                class="modal-form-input"
+                id="user-name"
+                type="text"
+                placeholder=""
+                name="user-name"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
+                required
+                />
+              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-person-black"></use></svg>
+              </div>
+            </div>
+            <div class="modal-form">
+              <label class="modal-form-field-label" for="user-tell">Phone</label>
+              <div class="modal-label-input">
+              <input
+                class="modal-form-input"
+                placeholder=""
+                id="user-tell"
+                name="user-tell"
+                type="tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-phone-black"></use></svg>
+              </div>
+            </div>
+            <div class="modal-form">
+              <label class="modal-form-field-label" for="user-email">Email</label>
+              <div class="modal-label-input">
+              <input
+              class="modal-form-input"
+              id="user-email"
+              type="email"
+              placeholder=""
+              name="user-email"
+              required
+              />
+              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-email-black"></use></svg>
+              </div>
+            </div>
+            <div class="modal-form">
+              <label class="modal-form-field-label" for="user-comment">Comment</label>
+              <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-comment"></textarea>
+            </div>
+            <div class="modal-privacy">
+              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden">
+              <label for="user-privacy" class="modal-privacy-label">
+                <span class="privacy-span">
+                  <svg width="10" height="8"><use href="./images/icons_3.svg#icon-Vector"></use></svg>
+                </span>I accept the terms and conditions of the <a href="" class="privacy-page">Privacy Policy</a></label>
+            </div>
+            <button class="modal-send" type="button">Send</button>
+          </form>
+        </div>
+       </div>
+        
     <!-- /modal form -->
   </body>
 </html>
