--- a/index.html
+++ b/index.html
@@ -550,12 +550,12 @@
               <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-email-black"></use></svg>
               </div>
             </div>
-            <div class="modal-form">
+            <div class="modal-form-comment">
               <label class="modal-form-field-label" for="user-comment">Comment</label>
               <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-comment"></textarea>
             </div>
             <div class="modal-privacy">
-              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden">
+              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden" checked>
               <label for="user-privacy" class="modal-privacy-label">
                 <span class="privacy-span">
                   <svg width="10" height="8"><use href="./images/icons_3.svg#icon-Vector"></use></svg>
