--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
               <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-comment"></textarea>
             </div>
             <div class="modal-privacy">
-              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden" checked>
+              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden">
               <label for="user-privacy" class="modal-privacy-label">
                 <span class="privacy-span">
                   <svg width="10" height="8"><use href="./images/icons_3.svg#icon-Vector"></use></svg>
