--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             /></label>
             <button type="submit" class="footer-btn-sub">
               Subscribe<svg width="24" height="24" class="icon-frame">
-                <use href="./images/icons_2.svg#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-Frame"></use>
               </svg>
             </button>
           </form>
@@ -497,18 +497,18 @@
     </footer>
 
     <!-- modal form -->
-    <div class="modal-overlay is-open">
+    <div class="backdrop is-open">
       <div class="modal-window">
-         <button class="modal-btn" type="button">
-            <svg width="8" height="8" class="icon-close">
-              <use href="./images/icons_2.svg#icon-close-black"></use>
-            </svg>
-          </button>
-          <p class="modal-text">Leave your contacts and we will call you back</p>
-          <form >
-            <div class="modal-form">
-              <label class="modal-form-field-label" for="user-name">Name</label>
-              <div class="modal-label-input">
+        <button class="modal-btn" type="button">
+          <svg width="8" height="8" class="icon-close">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="modal-form">
+            <label class="modal-form-field-label" for="user-name">Name</label>
+            <div class="modal-label-input">
               <input
                 class="modal-form-input"
                 id="user-name"
@@ -517,13 +517,15 @@
                 name="user-name"
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
                 required
-                />
-              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-person-black"></use></svg>
-              </div>
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
             </div>
-            <div class="modal-form">
-              <label class="modal-form-field-label" for="user-tell">Phone</label>
-              <div class="modal-label-input">
+          </div>
+          <div class="modal-form">
+            <label class="modal-form-field-label" for="user-tell">Phone</label>
+            <div class="modal-label-input">
               <input
                 class="modal-form-input"
                 placeholder=""
@@ -533,39 +535,58 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 required
               />
-              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-phone-black"></use></svg>
-              </div>
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
             </div>
-            <div class="modal-form">
-              <label class="modal-form-field-label" for="user-email">Email</label>
-              <div class="modal-label-input">
+          </div>
+          <div class="modal-form">
+            <label class="modal-form-field-label" for="user-email">Email</label>
+            <div class="modal-label-input">
               <input
-              class="modal-form-input"
-              id="user-email"
-              type="email"
-              placeholder=""
-              name="user-email"
-              required
+                class="modal-form-input"
+                id="user-email"
+                type="email"
+                placeholder=""
+                name="user-email"
+                required
               />
-              <svg class="modal-icon" width="18" height="24"><use href="./images/icons_2.svg#icon-email-black"></use></svg>
-              </div>
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
             </div>
-            <div class="modal-form-comment">
-              <label class="modal-form-field-label" for="user-comment">Comment</label>
-              <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-comment"></textarea>
-            </div>
-            <div class="modal-privacy">
-              <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="modal-privacy-input visually-hidden">
-              <label for="user-privacy" class="modal-privacy-label">
-                <span class="privacy-span">
-                  <svg width="10" height="8"><use href="./images/icons_3.svg#icon-Vector"></use></svg>
-                </span>I accept the terms and conditions of the <a href="" class="privacy-page">Privacy Policy</a></label>
-            </div>
-            <button class="modal-send" type="button">Send</button>
-          </form>
-        </div>
-       </div>
-        
+          </div>
+          <div class="modal-form-comment">
+            <label class="modal-form-field-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              class="modal-comment"
+            ></textarea>
+          </div>
+          <div class="modal-cont-checkbox">
+            <input
+              id="user-checkbox"
+              type="checkbox"
+              value="true"
+              name="user-checkbox"
+              class="checkbox visually-hidden"/>
+            <label for="user-checkbox" class="modal-privacy-checkbox">
+              <span class="checkbox-custom">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use></svg>
+              </span>I accept the terms and conditions of the
+              <a href="" class="privacy-page">Privacy Policy</a></label
+            >
+          </div>
+          <button class="modal-send" type="button">Send</button>
+        </form>
+      </div>
+    </div>
+
     <!-- /modal form -->
   </body>
 </html>
